updated all config
