# src/main/resources/swagger/v1/usertracking-api-swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: 0.0.1
   title: User
 servers:
-  - url: /api
+  - url: https://api.example.com/api
 paths:
   "/v1/users":
     x-swagger-router-controller: users
@@ -43,7 +43,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/user-tracking-bare"
+                $ref: "#/components/schemas/user-tracking"
         "400":
           description: error, tbd.
   "/v1/users/{uid}":
@@ -66,7 +66,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/user"
+                $ref: "#/components/schemas/user-tracking"
         "400":
           description: Invalid ID
         "404":
@@ -138,17 +138,20 @@ components:
         - userNumber
         - contactInfo
         - selectedPlan
+        - typeOfUser
       type: object
       properties:
         email:
           nullable: false
           type: string
+          minLength: 1  #length: empty
           format: email #email
           example: abc@demo.in
         userNumber:
           type: string
+          minLength: 1  #length: empty
           pattern: "[0-9]{8}(|/[A-Z]{1}|/[0-9]{1})" #pattern
-          example: '012345678'
+          example: '12345678'
         contactInfo:
           type: array
           items:
@@ -162,9 +165,11 @@ components:
           $ref: '#/components/schemas/audit-model'
         typeOfUser:
           type: string
+          minLength: 1  #length: empty
           enum:
             - asc
             - desc
+
     contact-info:
       type: object
       required:  #null
@@ -187,7 +192,6 @@ components:
         createdDate:
           type: string
           example: "2020-06-22"
-          minLength: 1  #length: empty
         updateDate:
           type: string
           example: "2020-06-22 11.10.222"
@@ -209,8 +213,8 @@ components:
         items:
           type: array
           items:
-            $ref: "#/components/schemas/user"
-    user:
+            $ref: "#/components/schemas/user-tracking"
+    user-tracking:
       type: object
       properties:
         id:
